# mb

./: .breakpoints  README.md  cmd.txt  pyproject.toml  sh.sh
.bin/: github.sh  heroku.sh
mb_project/: settings.py
posts/: models.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
templates/: about.html  home.html
