[tool.poetry]
name = "mb"
version = "0.1.0"
description = ""
authors = ["Yastrebov Ivan <easy-quest@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
