[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
language = "python3"
run = "python manage.py runserver 0.0.0.0:3000"

[tool]
[tool.poetry]
authors = ["Yastrebov Ivan <easy-quest@mail.ru>"]
description = ""
name = "mb"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.2.6"
gunicorn = "^20.1.0"
python = "^3.8"
[tool.poetry.dev-dependencies]
